--- a/.github/workflows/deployJavaAp.yml
+++ b/.github/workflows/deployJavaAp.yml
@@ -58,7 +58,7 @@ jobs:
       
       - name: List directory
         run: ls
-        working-directory: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/target/JavaWebAppValeyKey-0.0.1-SNAPSHOT/WEB-INF
+        working-directory: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/target/JavaWebAppValeyKey-0.0.1-SNAPSHOT/WEB-INF/classes/com/valeykey/frontend
 
   deploy:
     permissions:
