--- a/.github/workflows/deployJavaAp.yml
+++ b/.github/workflows/deployJavaAp.yml
@@ -74,7 +74,11 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: java-app
-                  
+      
+      - name: List directory
+        run: ls
+        working-directory: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/target/JavaWebAppValeyKey-0.0.1-SNAPSHOT/WEB-INF
+           
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
